tests/reflection_base_non_alias_bad.hop
// Verifies reflection base non alias is rejected.
fn main() {
	i32.base()
}
